# iot

./: .dockerignore  .gitignore  .gitmodules  DEPLOY.md  README.md  SALES.md  crypto.c  dtls.c  global.h  log.txt  prng.h  test-full-http.sh  uthash.h
apps/: CMakeLists.txt
apps/bench/: CMakeLists.txt  Dockerfile  cloud_loadgen.cpp  run-bench.sh
apps/cloud/: .gitignore  CLAUDE.md  Containerfile  Dockerfile  INSTALL.md  docker-compose.yml  docker-entrypoint.sh  host-firewall.sh  install.sh  run.sh  troubleshoot.md
apps/cloud/scripts/: iot-telemetry-archiver.sh  iot-telemetry-ingest.sh
apps/cloud/server/: CMakeLists.txt
apps/cloud/ui/: Containerfile  angular.json  package-lock.json  package.json  proxy.conf.json  serve.sh  tsconfig.json
apps/config/accessControlObject/: 0.lua
apps/config/bs/: bs.json
apps/config/deviceObject/: 0.json  0.lua
apps/config/firmwareObject/: 0.lua
apps/config/securityObject/: 0.json  0.lua  1.json  1.lua  modified1.json  modified1.lua
apps/config/serverObject/: 0.json  0.lua  1.lua
apps/device/: Dockerfile  README.md  cert-watcher.sh  docker-compose.yml  run.sh
apps/docs/: ace-refactor.md  architecture-dataflow-and-telemetry.md  architecture.md  cli.md  cloud-iot-customer-pitch.md  data-store-design.md  data-store-tdd.md  ddns-plan.md  device-ui-logs-and-terminal.md  hw-bringup-mangoh-yellow.md  hw-bringup-wp7702-cellular-wan.md  hw-consolidated-gateway-proposal.md  hw-schematics-consolidated-gateway.md  leshan-interop.md  lwm2m-design.md  lwm2m-object-handling.md  lwm2m-rdd.md  prd-ddns.md  prd-smsctl.md  smsctl-plan.md  tdd-ab-image-ota.md  tdd-bs-default-bootstrap.md  tdd-bs-hkdf-zerotouch.md  tdd-cloud-load-benchmark.md  tdd-cloud-scale-1m-devices.md  tdd-ddns.md  tdd-device-containers.md  tdd-device-shell.md  tdd-device-transfer.md  tdd-device-ui-path-proxy.md  tdd-installed-version.md  tdd-mangoh-cellular-sms.md  tdd-mangoh-yellow-sensors.md  tdd-multi-tenant-cloud.md  tdd-psk-provisioning.md  tdd-smsctl.md  tdd-vehicle-telemetry.md  tdd-wifi-autostart.md  tdd-wifi-credentials-seed.md  tdd-wifi-dhcp-lease.md  (+3 more)
apps/inc/: app.hpp  cbor_adapter.hpp  coap_adapter.hpp  db_adapter.hpp  ds_config.hpp  dtls_adapter.hpp  lua_config.hpp  lwm2m_adapter.hpp  lwm2m_bootstrap.hpp  lwm2m_bootstrap_client.hpp  lwm2m_bootstrap_server.hpp  lwm2m_cert_chunk.hpp  lwm2m_coap_builder.hpp  lwm2m_codec_linkformat.hpp  lwm2m_codec_opaque.hpp  lwm2m_codec_plaintext.hpp  lwm2m_codec_registry.hpp  lwm2m_codec_senml.hpp  lwm2m_codec_tlv.hpp  lwm2m_dm_client.hpp  lwm2m_dm_server.hpp  lwm2m_durable_sample_buffer.hpp  lwm2m_object_3_device.hpp  lwm2m_object_cert.hpp  lwm2m_object_firmware.hpp  lwm2m_object_sensors.hpp  lwm2m_object_store.hpp  lwm2m_object_stubs.hpp  lwm2m_observe.hpp  lwm2m_registration.hpp  lwm2m_registration_client.hpp  lwm2m_registration_server.hpp  lwm2m_registry_mirror.hpp  lwm2m_sample_buffer.hpp  lwm2m_send.hpp  lwm2m_send_server.hpp  lwm2m_send_uploader.hpp  lwm2m_telemetry_pack.hpp  provisioning_policy.hpp  psk_gen.hpp  (+4 more)
apps/inc/cli/: coap_dispatch.hpp  command.hpp  command_context.hpp  command_registry.hpp
apps/patch/: tinydtls.patch
apps/src/: app.cpp  cbor_adapter.cpp  coap_adapter.cpp  db_adapter.cpp  ds_config.cpp  dtls_adapter.cpp  lua_config.cpp  lwm2m_adapter.cpp  lwm2m_bootstrap_client.cpp  lwm2m_bootstrap_server.cpp  lwm2m_cert_chunk.cpp  lwm2m_codec_linkformat.cpp  lwm2m_codec_plaintext.cpp  lwm2m_codec_registry.cpp  lwm2m_codec_senml.cpp  lwm2m_codec_tlv.cpp  lwm2m_dm_client.cpp  lwm2m_dm_server.cpp  lwm2m_durable_sample_buffer.cpp  lwm2m_object_3_device.cpp  lwm2m_object_cert.cpp  lwm2m_object_firmware.cpp  lwm2m_object_sensors.cpp  lwm2m_object_store.cpp  lwm2m_object_stubs.cpp  lwm2m_observe.cpp  lwm2m_registration.cpp  lwm2m_registration_client.cpp  lwm2m_registration_server.cpp  lwm2m_registry_mirror.cpp  lwm2m_send.cpp  lwm2m_send_server.cpp  lwm2m_send_uploader.cpp  lwm2m_telemetry_pack.cpp  main.cpp  provisioning_policy.cpp  psk_gen.cpp  readline.cpp  rpi_serial.cpp  tenant_policy.cpp  (+1 more)
apps/src/cli/: coap_dispatch.cpp  command_registry.cpp
apps/test/: CMakeLists.txt  bootstrap_test.cpp  coap_adapter_test.cpp  coap_adapter_test.hpp  codec_registry_test.cpp  dm_test.cpp  durable_sample_buffer_test.cpp  linkformat_test.cpp  location_object_test.cpp  lwm2m_adapter_test.cpp  lwm2m_adapter_test.hpp  object_store_test.cpp  objects_test.cpp  observe_test.cpp  provisioning_policy_test.cpp  psk_gen_test.cpp  push_regression_test.cpp  registration_client_test.cpp  registration_server_test.cpp  registry_test.cpp  rpi_serial_test.cpp  sample_buffer_test.cpp  send_server_test.cpp  send_test.cpp  send_uploader_test.cpp  senml_test.cpp  sensors_object_test.cpp  telemetry_pack_test.cpp  tenant_policy_test.cpp  tlv_test.cpp
apps/tools/: bs_master_wrap.cpp
log/: dtlsc.txt  (+1 more)
modules/containers/: CMakeLists.txt  README.md
modules/containers/daemon/: containerd.cpp  containerd.hpp  crun_runtime.cpp  crun_runtime.hpp  http_client.cpp  http_client.hpp  layer_store.cpp  layer_store.hpp  main.cpp  net_bridge.cpp  net_bridge.hpp  registry_puller.cpp  registry_puller.hpp
modules/containers/inc/: container_net.hpp  container_roster.hpp  image_prune.hpp  image_ref.hpp  oci_bundle.hpp  oci_layer.hpp  registry.hpp
modules/containers/schemas/: container.lua
modules/containers/src/: container_net.cpp  container_roster.cpp  image_prune.cpp  image_ref.cpp  oci_bundle.cpp  oci_layer.cpp  registry.cpp
modules/containers/test/: container_net_test.cpp  container_roster_test.cpp  image_prune_test.cpp  image_ref_test.cpp  oci_bundle_test.cpp  oci_layer_test.cpp  registry_test.cpp
modules/data-store/: CMakeLists.txt
modules/data-store/bench/: ds_bench.cpp
modules/data-store/docs/: benchmark.md  client_api.md  design.md  protocol.md  tdd.md
modules/ddns/: CMakeLists.txt
modules/http-server/: CMakeLists.txt  Dockerfile
modules/mqtt/: CMakeLists.txt  README.md
modules/openvpn-client/: CMakeLists.txt
modules/sensors/: CMakeLists.txt  README.md
modules/smsctl/: CMakeLists.txt
modules/vehicle/: CMakeLists.txt  README.md
(+685 files in other folders)
